# rasp-jupyter

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebooks/: Test.ipynb
src/rasp_kernel/: __main__,py  main.py
src/rasp_kernel/resources/kernelspec/: kernel.json
